# git_training

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  Makefile  README.md  main.cpp
lib/app/: application.cpp  application.h
lib/comapre/: compare.cpp  compare.h
lib/math/: math_func.cpp  math_func.h
lib/my_object/: my_object.cpp  my_object.h
